deleting api keys

--- a/API_mini_project_completed.ipynb
+++ b/API_mini_project_completed.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
-    "API_KEY = 'DumbsxjPUD8jhdwZBxb5'"
+    "API_KEY = ''"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "source": [
     "# Now, call the Quandl API and pull out a small sample of the data (only one day) to get a glimpse\n",
     "# into the JSON structure that will be returned\n",
-    "url = 'https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=20170101&end_date=20170102&api_key=DumbsxjPUD8jhdwZBxb5'\n",
+    "url = 'https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?start_date=20170101&end_date=20170102&'\n",
     "r = requests.get(url)\n",
     "json = r.json()\n",
     "print(json)"
